do category page and search page adaptation, fix footer categories align

--- a/components/Footer/styles.module.css
+++ b/components/Footer/styles.module.css
@@ -111,6 +111,7 @@
   .categoriesMobile {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 52px 0 50px;
   }
 
