--- a/components/MobileHeader/styles.module.css
+++ b/components/MobileHeader/styles.module.css
@@ -9,7 +9,7 @@
   left: 0;
   right: 0;
   position: fixed;
-  z-index: 200;
+  z-index: 2000;
 }
 
 .header > svg {
