--- a/components/SignToNews/styles.module.css
+++ b/components/SignToNews/styles.module.css
@@ -106,4 +106,8 @@
   .actions button {
     width: 100%;
   }
+
+  .signToNewsWrapper:not(.popup) {
+    padding: 40px 15px;
+  }
 }
