--- a/styles/globals.css
+++ b/styles/globals.css
@@ -183,7 +183,7 @@ span, button, h1, h2, h3, h4, h5, li, p, input {
   height: 45px;
   background: #B987F2;
   color: white;
-  z-index: 201;
+  z-index: 2001;
   font-family: "Spartan MB";
   font-style: normal;
   font-weight: 700;
@@ -254,6 +254,6 @@ span, button, h1, h2, h3, h4, h5, li, p, input {
   }
 
   .page-content {
-    padding-top: var(--distance-top);
+    padding-top: var(--distance-top) !important;
   }
 }
